--- a/make_training_results.ipynb
+++ b/make_training_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "id": "9e8f0d1a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "id": "de2ae38a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "id": "708bf49c",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "4  0.970494  1.137903  0.096580            5  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,80 +174,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "id": "d8c66a82",
    "metadata": {},
    "outputs": [],
    "source": [
     "results = pd.DataFrame(\n",
     "    columns=['MD', 'R10', 'R05', 'MD_NPC', 'R10_NPC', 'R05_NPC', 'MD_NS',  'R10_NS', 'R05_NS'],\n",
-    "    index=['loss', 'acc']\n",
+    "    index=['loss', 'acc', 'ppl', 'te']\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "id": "a2a4a7b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "md_loss, i = base2['val_loss'].min(), base2['val_loss'].argmin()\n",
     "md_acc = base2['val_acc'][i]\n",
+    "md_ppl = base2['val_ppl'][i]\n",
+    "md_te = base2['val_te'][i]\n",
     "results.loc['loss', 'MD'], results.loc['acc', 'MD'] = md_loss, md_acc\n",
+    "results.loc['ppl', 'MD'], results.loc['te', 'MD'] = md_ppl, md_te\n",
     "\n",
     "r10_loss, i = random10['val_loss'].min(), random10['val_loss'].argmin()\n",
     "r10_acc = random10['val_acc'][i]\n",
+    "r10_ppl = random10['val_ppl'][i]\n",
+    "r10_te = random10['val_te'][i]\n",
     "results.loc['loss', 'R10'], results.loc['acc', 'R10'] = r10_loss, r10_acc\n",
+    "results.loc['ppl', 'R10'], results.loc['te', 'R10'] = r10_ppl, r10_te\n",
     "\n",
     "r05_loss, i = random20['val_loss'].min(), random20['val_loss'].argmin()\n",
     "r05_acc = random20['val_acc'][i]\n",
-    "results.loc['loss', 'R05'], results.loc['acc', 'R05'] = r05_loss, r05_acc"
+    "r05_ppl = random20['val_ppl'][i]\n",
+    "r05_te = random20['val_te'][i]\n",
+    "results.loc['loss', 'R05'], results.loc['acc', 'R05'] = r05_loss, r05_acc\n",
+    "results.loc['ppl', 'R05'], results.loc['te', 'R05'] = r05_ppl, r05_te"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "id": "f4ca70ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "md_loss, i = base2_noPCs['val_loss'].min(), base2_noPCs['val_loss'].argmin()\n",
     "md_acc = base2_noPCs['val_acc'][i]\n",
+    "md_ppl = base2_noPCs['val_ppl'][i]\n",
+    "md_te = base2_noPCs['val_te'][i]\n",
     "results.loc['loss', 'MD_NPC'], results.loc['acc', 'MD_NPC'] = md_loss, md_acc\n",
+    "results.loc['ppl', 'MD_NPC'], results.loc['te', 'MD_NPC'] = md_ppl, md_te\n",
     "\n",
     "r10_loss, i = random10_noPCs['val_loss'].min(), random10_noPCs['val_loss'].argmin()\n",
     "r10_acc = random10_noPCs['val_acc'][i]\n",
+    "r10_ppl = random10_noPCs['val_ppl'][i]\n",
+    "r10_te = random10_noPCs['val_te'][i]\n",
     "results.loc['loss', 'R10_NPC'], results.loc['acc', 'R10_NPC'] = r10_loss, r10_acc\n",
+    "results.loc['ppl', 'R10_NPC'], results.loc['te', 'R10_NPC'] = r10_ppl, r10_te\n",
     "\n",
     "r05_loss, i = random20_noPCs['val_loss'].min(), random20_noPCs['val_loss'].argmin()\n",
     "r05_acc = random20_noPCs['val_acc'][i]\n",
-    "results.loc['loss', 'R05_NPC'], results.loc['acc', 'R05_NPC'] = r05_loss, r05_acc"
+    "r05_ppl = random20_noPCs['val_ppl'][i]\n",
+    "r05_te = random20_noPCs['val_te'][i]\n",
+    "results.loc['loss', 'R05_NPC'], results.loc['acc', 'R05_NPC'] = r05_loss, r05_acc\n",
+    "results.loc['ppl', 'R05_NPC'], results.loc['te', 'R05_NPC'] = r05_ppl, r05_te"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "id": "908a9f92",
    "metadata": {},
    "outputs": [],
    "source": [
     "md_loss, i = base2_no_stage['val_loss'].min(), base2_no_stage['val_loss'].argmin()\n",
     "md_acc = base2_no_stage['val_acc'][i]\n",
+    "md_ppl = base2_no_stage['val_ppl'][i]\n",
+    "md_te = base2_no_stage['val_te'][i]\n",
     "results.loc['loss', 'MD_NS'], results.loc['acc', 'MD_NS'] = md_loss, md_acc\n",
+    "results.loc['ppl', 'MD_NS'], results.loc['te', 'MD_NS'] = md_ppl, md_te\n",
     "\n",
     "r10_loss, i = random10_no_stage['val_loss'].min(), random10_no_stage['val_loss'].argmin()\n",
     "r10_acc = random10_no_stage['val_acc'][i]\n",
+    "r10_ppl = random10_no_stage['val_ppl'][i]\n",
+    "r10_te = random10_no_stage['val_te'][i]\n",
     "results.loc['loss', 'R10_NS'], results.loc['acc', 'R10_NS'] = r10_loss, r10_acc\n",
+    "results.loc['ppl', 'R10_NS'], results.loc['te', 'R10_NS'] = r10_ppl, r10_te\n",
     "\n",
     "r05_loss, i = random20_no_stage['val_loss'].min(), random20_no_stage['val_loss'].argmin()\n",
     "r05_acc = random20_no_stage['val_acc'][i]\n",
-    "results.loc['loss', 'R05_NS'], results.loc['acc', 'R05_NS'] = r05_loss, r05_acc"
+    "r05_ppl = random20_no_stage['val_ppl'][i]\n",
+    "r05_te = random20_no_stage['val_te'][i]\n",
+    "results.loc['loss', 'R05_NS'], results.loc['acc', 'R05_NS'] = r05_loss, r05_acc\n",
+    "results.loc['ppl', 'R05_NS'], results.loc['te', 'R05_NS'] = r05_ppl, r05_te"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "id": "7727245e",
    "metadata": {},
    "outputs": [
@@ -258,15 +285,48 @@
       "            MD       R10       R05    MD_NPC   R10_NPC   R05_NPC     MD_NS  \\\n",
       "loss  0.062481  0.048564  0.049812  0.066103  0.049671  0.049884   0.06688   \n",
       "acc   0.986046  0.986792  0.986851   0.98456  0.987273  0.987006  0.984622   \n",
+      "ppl   1.065053  1.050349  1.051626  1.069045  1.051214  1.051543   1.06983   \n",
+      "te    0.073663  0.029963   0.03237  0.076793  0.027926  0.027112  0.073489   \n",
       "\n",
       "        R10_NS    R05_NS  \n",
       "loss  0.048604  0.043692  \n",
-      "acc   0.987111  0.988284  \n"
+      "acc   0.987111  0.988284  \n",
+      "ppl   1.050022  1.045053  \n",
+      "te    0.025874  0.021102  \n"
      ]
     }
    ],
    "source": [
     "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6dd3dfad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wrap(s):\n",
+    "    return r'\\\\texttt{' + str(s) + '}'\n",
+    "\n",
+    "latex_table = results.to_latex(\n",
+    "    index=True,        # keep the row labels\n",
+    "    escape=False,      # we already escaped with \\texttt{}\n",
+    "    column_format='l' + 'c'*len(results.columns),  # optional\n",
+    "    float_format='%.4f'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0e5ba2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('training.tex', 'w') as f:\n",
+    "    f.write(latex_table)"
    ]
   }
  ],
