--- a/make_dataset_pickle.ipynb
+++ b/make_dataset_pickle.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "6af1278f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from data_utils import CSGridMLMDataset\n",
     "from GridMLM_tokenizers import CSGridMLMTokenizer"
@@ -13,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "baa2c8e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = CSGridMLMTokenizer(fixed_length=256)\n",
-    "tokenizer_noPCs = CSGridMLMTokenizer(fixed_length=256,use_pc_roll=False)"
+    "# tokenizer = CSGridMLMTokenizer(fixed_length=256, intertwine_bar_info=False, trim_start=True)\n",
+    "# tokenizer_noPCs = CSGridMLMTokenizer(fixed_length=256,use_pc_roll=False, intertwine_bar_info=False, trim_start=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bf59d115",
    "metadata": {},
    "outputs": [],
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4911b4f7",
    "metadata": {},
    "outputs": [
@@ -116,8 +125,79 @@
     }
    ],
    "source": [
-    "train_dataset = CSGridMLMDataset(train_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')\n",
-    "val_dataset = CSGridMLMDataset(val_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')"
+    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')\n",
+    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "21010ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontloading data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|█████▉    | 8735/14676 [04:39<02:14, 44.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem in: /media/maindisk/data/hooktheory_midi_hr/CA_train/2518_bruce-rowland_jessicas-theme_intro-and-verse.mid\n",
+      "cannot unpack non-iterable float object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 81%|████████▏ | 11953/14676 [06:21<00:59, 45.84it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem in: /media/maindisk/data/hooktheory_midi_hr/CA_train/4022_deftones_battle-axe_pre-chorus-and-chorus.mid\n",
+      "cannot unpack non-iterable float object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14676/14676 [08:04<00:00, 30.26it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontloading data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 758/758 [00:17<00:00, 43.53it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = CSGridMLMTokenizer(fixed_length=256, intertwine_bar_info=True, trim_start=False)\n",
+    "train_dataset = CSGridMLMDataset(train_dir, tokenizer, 512, name_suffix='MLMH_bar')\n",
+    "val_dataset = CSGridMLMDataset(val_dir, tokenizer, 512, name_suffix='MLMH_bar')"
    ]
   }
  ],
