--- a/test_tokenization.ipynb
+++ b/test_tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "542ca197",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "74473cfa",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
     "print(x['pianoroll'].shape)\n",
     "print(x['harmonic_rhythm_density'])\n",
     "print(x['harmonic_complexity'])\n",
-    "print(x['conditions'])"
+    "print(x['h_density_complexity'])"
    ]
   },
   {
