testing 80 seq debug gen

--- a/make_dataset_pickle.ipynb
+++ b/make_dataset_pickle.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "baa2c8e8",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bf59d115",
    "metadata": {},
    "outputs": [],
@@ -44,8 +44,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94347954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer)\n",
+    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4911b4f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer_noPCs, name_suffix='MLMH_noPCs')\n",
+    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer_noPCs, name_suffix='MLMH_noPCs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "21010ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenizer = CSGridMLMTokenizer(fixed_length=256, intertwine_bar_info=True, trim_start=False)\n",
+    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer, name_suffix='MLMH_bar')\n",
+    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer, name_suffix='MLMH_bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f289365d",
    "metadata": {},
    "outputs": [
     {
@@ -66,87 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14676/14676 [07:31<00:00, 32.47it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frontloading data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 758/758 [00:50<00:00, 14.91it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer, 512)\n",
-    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer, 512)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4911b4f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frontloading data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 14676/14676 [07:47<00:00, 31.38it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frontloading data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 758/758 [00:16<00:00, 47.30it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')\n",
-    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer_noPCs, 512, name_suffix='MLMH_noPCs')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "21010ea8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frontloading data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|█████▉    | 8735/14676 [04:39<02:14, 44.20it/s]"
+      " 60%|█████▉    | 8735/14676 [04:27<07:10, 13.79it/s]"
      ]
     },
     {
@@ -161,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 81%|████████▏ | 11953/14676 [06:21<00:59, 45.84it/s]"
+      " 81%|████████▏ | 11958/14676 [06:05<00:57, 47.59it/s]"
      ]
     },
     {
@@ -176,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14676/14676 [08:04<00:00, 30.26it/s]\n"
+      "100%|██████████| 14676/14676 [07:31<00:00, 32.50it/s]\n"
      ]
     },
     {
@@ -190,14 +144,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 758/758 [00:17<00:00, 43.53it/s]\n"
+      " 75%|███████▍  | 565/758 [00:11<00:03, 48.77it/s]"
      ]
     }
    ],
    "source": [
-    "tokenizer = CSGridMLMTokenizer(fixed_length=256, intertwine_bar_info=True, trim_start=False)\n",
-    "train_dataset = CSGridMLMDataset(train_dir, tokenizer, 512, name_suffix='MLMH_bar')\n",
-    "val_dataset = CSGridMLMDataset(val_dir, tokenizer, 512, name_suffix='MLMH_bar')"
+    "tokenizer = CSGridMLMTokenizer(fixed_length=80, quantization='4th', intertwine_bar_info=True, trim_start=False)\n",
+    "train_dataset = CSGridMLMDataset(train_dir, tokenizer, name_suffix='MLMH_bar_qt')\n",
+    "val_dataset = CSGridMLMDataset(val_dir, tokenizer, name_suffix='MLMH_bar_qt')"
    ]
   }
  ],
